# quant-skills

./: .gitignore  .ignore  AGENTS.md  README.md  design-spec.md  instructions.md  package.json  plot-rules.md  pyproject.toml  report-rules.md  turbo.json
_archive_do_not_use/: README.md
_archive_do_not_use/third-party-skills/: README.md
alpha-gen/: README.md
alpha-gen-skills/: README.md
alpha-gen-skills/bnb-alpha-research/: SKILL.md
alpha-gen-skills/data-download-clean/: SKILL.md
alpha-gen-skills/ohlcv-alpha-research/: SKILL.md
alpha-gen-skills/quant-basics/: README.md
apps/: README.md
apps/report-studio/: index.html  package.json  tsconfig.json
apps/research-cli/: pyproject.toml
apps/research-cli/src/quant_research_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
apps/research-cli/src/research_cli/: __init__.py  main.py
apps/research-cli/tests/: test_architecture_boundaries.py  test_research_core.py  test_visual_contracts.py
bnb-skill/: README.md  package.json
cmc-bnb-skills/: README.md
cmc-skills/: README.md
design/: OPTIONS.md  report-design-liq.md  report-design-mellow.md  report-design-ml.md
docs/: README.md
framework/: ASSET_EXTENSIONS.md  DATA_AND_LABELS.md  EXPERIMENT_CATALOG.md  README.md  STEP_BY_STEP_WORKFLOW.md  VALIDATION_AND_COSTS.md  VISUAL_GUIDE.md
instructions-skill/: SKILL.md
mini-knowledge-base/: GENERAL_QUANT_REPORT_GUIDE.md  ohlcv_feature_math_reference.md
research/: README.md
standards/: README.md
start-here/: SKILL.md
support-skills/: README.md
third-party-skills/: README.md
(+69 files in other folders)
